Profile dan footer update lagi

--- a/BERANDA.html
+++ b/BERANDA.html
@@ -235,11 +235,11 @@
 
   <!-- Logo Bar -->
   <div class="logo-row">
-    <img src="FOOTER\Tut wuri handayani.png" alt="">
+    <img src="FOOTER\Tut wuri handayani1.png" alt="">
     <img src="FOOTER\Kementerian_Agama_new_logo.png" alt="">
     <img src="FOOTER\Logo_Kementerian_PPN-Bappenas_(2023).png" alt="">
     <img src="FOOTER\Lambang_Daerah_Kab._Kayong_Utara.png" alt="">
-    <img src="FOOTER\GPE.png" alt="">
+    <img src="FOOTER\GPE-removebg-preview.png" alt="">
     <img src="FOTO BERANDA\KREASI-SYMBOL_KREASI--768x416.png" alt="">
     <img src="FOOTER\Logo_SavetheChildren.png" alt="">
     <img src="FOTO BERANDA\dikdesmen.png" alt="">
