--- a/PROFILE.html
+++ b/PROFILE.html
@@ -213,103 +213,83 @@
 </section>
 
 <section class="STRUKTUR ORGANISASI">
-            <h2>STRUKTUR ORGANSIASI</h2>    
-  <div class="judul"><h2>PIMPINAN PUSAT</h2>
-    <div class="garis"></div>
+            <h2>TIM PROGRAM KREASI<br>KABUPATEN KETAPANG</h2>    
+
+  <div class="struktur-container">
+      <div class="card-struktur">
+      <img src="Foto Struktur organisasi\2.png" class="img-pop-tim" alt="struktur">
+      <h3 class="nama">Julni Rhamawan</h3>
+      <p class="jabatan">Program Manager KREASI
+      <br>Kalimantan Barat</p>
+    </div>
+
+    <div class="card-struktur">
+      <img src="Foto Struktur organisasi\3.png" class="img-pop-tim" alt="struktur">
+      <h3 class="nama">Santoso Setio</h3>
+      <p class="jabatan">Program Coordinator
+      <br>KREASI Kabupaten Ketapang</p>
+    </div>
   </div>
 
   <div class="struktur-container">
     <div class="card-struktur">
-      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
-      <h3 class="nama">NAMA</h3>
-      <p class="jabatan">Jabatan</p>
+      <img src="Foto Struktur organisasi\5.png" class="img-pop-tim" alt="struktur">
+      <h3 class="nama">Syarif Syamsurrizal</h3>
+      <p class="jabatan">Advocacy Officer
+      <br>KREASI Kabupaten Ketapang</p>
     </div>
 
     <div class="card-struktur">
-      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
-      <h3 class="nama">NAMA</h3>
-      <p class="jabatan">Jabatan</p>
+      <img src="Foto Struktur organisasi\6.png" class="img-pop-tim" alt="struktur">
+      <h3 class="nama">Jainal Abidin</h3>
+      <p class="jabatan">Basic Education
+<br>KREASI Kabupaten Ketapang</p>
     </div>
 
     <div class="card-struktur">
-      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
-      <h3 class="nama">NAMA</h3>
-      <p class="jabatan">Jabatan</p>
+      <img src="Foto Struktur organisasi\11.png" class="img-pop-tim" alt="struktur">
+      <h3 class="nama">Ilma Karmila</h3>
+      <p class="jabatan">Early Childhood <br>Education Development
+<br>KREASI Kabupaten Ketapang</p>
     </div>
+
+    <div class="card-struktur">
+      <img src="Foto Struktur organisasi\9.png" class="img-pop-tim" alt="struktur">
+      <h3 class="nama">Siti Mauliani</h3>
+      <p class="jabatan">Child Protection Officer
+<br>KREASI Kabupaten Ketapang</p>
   </div>
-
-  <div class="judul"><h2>NATIONAL OFFICE</h2>
-    <div class="garis"></div>
   </div>
 
   <div class="struktur-container">
     <div class="card-struktur">
-      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
-      <h3 class="nama">NAMA</h3>
-      <p class="jabatan">Jabatan</p>
+      <img src="Foto Struktur organisasi\4.png" class="img-pop-tim" alt="struktur">
+      <h3 class="nama">Sujiman</h3>
+      <p class="jabatan">Monitoring, Evaluation, <br>Accountability & Learning Officer
+<br>KREASI Kabupaten Ketapang</p>
     </div>
 
     <div class="card-struktur">
-      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
-      <h3 class="nama">NAMA</h3>
-      <p class="jabatan">Jabatan</p>
+      <img src="Foto Struktur organisasi\8.png" class="img-pop-tim" alt="struktur">
+      <h3 class="nama">Afriyandi Nur Huda</h3>
+      <p class="jabatan">Communcitions & Media Officer
+<br>KREASI Kabupaten Ketapang</p>
     </div>
 
     <div class="card-struktur">
-      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
-      <h3 class="nama">NAMA</h3>
-      <p class="jabatan">Jabatan</p>
-    </div>
-  </div>
-
-  <div class="judul"><h2>PROGRAM MANAGER</h2>
-    <div class="garis"></div>
-  </div>
-
-  <div class="struktur-container">
-    <div class="card-struktur">
-      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
-      <h3 class="nama">NAMA</h3>
-      <p class="jabatan">Jabatan</p>
+      <img src="Foto Struktur organisasi\7.png" class="img-pop-tim" alt="struktur">
+      <h3 class="nama">Heri Setiawan</h3>
+      <p class="jabatan">Logistic Officer
+<br>KREASI Kabupaten Ketapang</p>
     </div>
 
     <div class="card-struktur">
-      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
-      <h3 class="nama">NAMA</h3>
-      <p class="jabatan">Jabatan</p>
-    </div>
-
-    <div class="card-struktur">
-      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
-      <h3 class="nama">NAMA</h3>
-      <p class="jabatan">Jabatan</p>
+      <img src="Foto Struktur organisasi\10.png" class="img-pop-tim" alt="struktur">
+      <h3 class="nama">Nur Malina <br>Indah Putri</h3>
+      <p class="jabatan">Finance Officer
+<br>KREASI Kabupaten Ketapang</p>
   </div>
   </div>
-
-    <div class="judul"><h2>KETAPANG OFFICE</h2>
-    <div class="garis"></div>
-  </div>
-
-  <div class="struktur-container">
-    <div class="card-struktur">
-      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
-      <h3 class="nama">NAMA</h3>
-      <p class="jabatan">Jabatan</p>
-    </div>
-
-    <div class="card-struktur">
-      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
-      <h3 class="nama">NAMA</h3>
-      <p class="jabatan">Jabatan</p>
-    </div>
-
-    <div class="card-struktur">
-      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
-      <h3 class="nama">NAMA</h3>
-      <p class="jabatan">Jabatan</p>
-  </div>
-  </div>
-
 </section>
 
 <footer class="footer">
@@ -352,11 +332,11 @@
 
   <!-- Logo Bar -->
   <div class="logo-row">
-    <img src="FOOTER\Tut wuri handayani.png" alt="">
+    <img src="FOOTER\Tut wuri handayani1.png" alt="">
     <img src="FOOTER\Kementerian_Agama_new_logo.png" alt="">
     <img src="FOOTER\Logo_Kementerian_PPN-Bappenas_(2023).png" alt="">
     <img src="FOOTER\Lambang_Daerah_Kab._Kayong_Utara.png" alt="">
-    <img src="FOOTER\GPE.png" alt="">
+    <img src="FOOTER\GPE-removebg-preview.png" alt="">
     <img src="FOTO BERANDA\KREASI-SYMBOL_KREASI--768x416.png" alt="">
     <img src="FOOTER\Logo_SavetheChildren.png" alt="">
     <img src="FOTO BERANDA\dikdesmen.png" alt="">
