--- a/BERITA.html
+++ b/BERITA.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KREASI - Beranda</title>
+    <title>KREASI - Berita</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -142,11 +142,11 @@
 
   <!-- Logo Bar -->
   <div class="logo-row">
-    <img src="FOOTER\Tut wuri handayani.png" alt="">
+    <img src="FOOTER\Tut wuri handayani1.png" alt="">
     <img src="FOOTER\Kementerian_Agama_new_logo.png" alt="">
     <img src="FOOTER\Logo_Kementerian_PPN-Bappenas_(2023).png" alt="">
     <img src="FOOTER\Lambang_Daerah_Kab._Kayong_Utara.png" alt="">
-    <img src="FOOTER\GPE.png" alt="">
+    <img src="FOOTER\GPE-removebg-preview.png" alt="">
     <img src="FOTO BERANDA\KREASI-SYMBOL_KREASI--768x416.png" alt="">
     <img src="FOOTER\Logo_SavetheChildren.png" alt="">
     <img src="FOTO BERANDA\dikdesmen.png" alt="">
