--- a/GALERI.html
+++ b/GALERI.html
@@ -9,45 +9,45 @@
 </head>
 <body>
 
-    <header class="main-header">
-        <div class="top-bar">
-            <div class="logo">
-                <img height="70" src="FOTO BERANDA/KREASI-SYMBOL_KREASI--768x416.png"alt="LOGO KREASI" class="kresi-logo">
-            </div>
-            <div class="search-box">
-                <input type="text" placeholder="Cari...">
-                <button class="search-btn"><i class="fas fa-search"></i></button>
-            </div>
-            <div class="right-logos">
-                <img height="70" src="FOTO BERANDA/dikdesmen.png" alt="Logo Kemendikbud" class="kemendikbud-logo">
+  <header class="main-header">
+    <div class="top-bar">
+        <div class="logo">
+            <img height="70" src="FOTO BERANDA/KREASI-SYMBOL_KREASI--768x416.png"alt="LOGO KREASI" class="kresi-logo">
+        </div>
+        <div class="search-box">
+            <input type="text" placeholder="Cari...">
+            <button class="search-btn"><i class="fas fa-search"></i></button>
+        </div>
+        <div class="right-logos">
+            <img height="70" src="FOTO BERANDA/dikdesmen.png" alt="Logo Kemendikbud" class="kemendikbud-logo">
+        </div>
+    </div>
+
+    <button class="hamburger-menu" id="hamburger"><i class="fas fa-bars"></i></button>
+    
+    <nav class="main-nav" id="main-nav-menu">
+        <a href="BERANDA.html" class="nav-item active">BERANDA</a>
+        <div class="nav-item has-dropdown">PROFILE <i class="fas fa-caret-right"></i>
+            <div class="dropdown-content profile-dropdown">
+                <a href="profile.html">TENTANG</a>
+                <a href="#">TUJUAN</a>
+                <a href="#">PROGRAM KREASI</a>
+                <a href="#">STRUKTUR</a>
             </div>
         </div>
-
-        <button class="hamburger-menu" id="hamburger"><i class="fas fa-bars"></i></button>
-        
-        <nav class="main-nav" id="main-nav-menu">
-            <a href="BERANDA.html" class="nav-item">BERANDA</a>
-            <div class="nav-item has-dropdown">PROFILE <i class="fas fa-caret-right"></i>
-                <div class="dropdown-content profile-dropdown">
-                    <a href="profile.html">TENTANG</a>
-                    <a href="profile.html#tujuan">TUJUAN</a>
-                    <a href="profile.html#program">PROGRAM KREASI</a>
-                    <a href="profile.html#struktur">STRUKTUR</a>
-                </div>
+        <a href="berita.html" class="nav-item">BERITA</a>
+        <a href="materi.html" class="nav-item">MATERI</a>
+        <div class="nav-item has-dropdown">GALERI <i class="fas fa-caret-right"></i>
+            <div class="dropdown-content galeri-dropdown">
+                <a href="galeri.html">FOTO KEGIATAN</a>
+                <a href="#">VIDEO</a>
             </div>
-            <a href="berita.html" class="nav-item">BERITA</a>
-            <a href="materi.html" class="nav-item">MATERI</a>
-            <div class="nav-item active has-dropdown">GALERI <i class="fas fa-caret-right"></i>
-                <div class="dropdown-content galeri-dropdown">
-                    <a href="galeri.html">FOTO KEGIATAN</a>
-                    <a href="#">VIDEO</a>
-                </div>
-            </div>
-            <div class="auth-buttons">
-                <button class="btn btn-id">ID</button>
-            </div>
-        </nav>
-    </header>
+        </div>
+        <div class="auth-buttons">
+            <button class="btn btn-id">ID</button>
+        </div>
+    </nav>
+</header>
 
     <main class="main-content galeri-detail-layout">
         <h1 class="page-title">DOKUMENTASI: WORKSHOP KURIKULUM ADAPTIF</h1>
