--- a/BERANDA.html
+++ b/BERANDA.html
@@ -53,7 +53,7 @@
         <section class="hero-banner">
             <div class="slider">
                  <div class="slides">
-                <div class="slide"> <img src="FOTO BERANDA/Kampanye Perlindungan Anak 10.9.25.jpegn "></div>
+                <div class="slide"> <img src="hero.jpg "></div>
                 <div class="slide"> <img src="FOTO BERANDA/Monitoring Sekolah Mentuban 1.10.25.JPG"></div>
                 <div class="slide"> <img src="FOTO BERANDA/meeting kreasi bersama lptk.JPG"></div>
                 <div class="slide"> <img src="FOTO BERANDA/learning revitais 18.9.25.JPG"></div>
